# flutter-skill-cli

./: .dockerignore  .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FLUTTER_3X_COMPATIBILITY.md  PUBLISHING.md  QUICK_REFERENCE_WEB.md  QUICK_START_TESTING.md  README.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.4.0.md  RELEASE_PROCESS.md  SKILL.md  USAGE_GUIDE.md  WEB_OPTIMIZATION.md  analysis_options.yaml  dart_test.yaml  flutter_skill_wrapper.sh  install.ps1  install.sh  publish.sh  pubspec.yaml  server.json  smithery.json
.claude/: settings.local.json
.github/: FUNDING.yml  RELEASE_GUIDE.md
assets/: convert.html  description-intellij.html
demo/: QUICK_START.md  README.md  package.json  quick_demo.sh  run_demo.js  test_indicators_demo.dart
demo_app/: .metadata  pubspec.yaml
docs/: CROSS_PLATFORM_VERIFICATION.md  MULTI_APP_SELECTION.md  ROADMAP.md  SMART_DISCOVERY.md  SMART_SELECTION.md  TESTING_REPORT_v0.4.1.md  TOOL_PRIORITY_SETUP.md  UI_IMPLEMENTATION_ROADMAP.md  UI_UX_DESIGN_GUIDE.md  cli-server-commands.md  continue-dev.md
homebrew/: README.md  flutter-skill.rb
intellij-plugin/: README.md  build.gradle.kts  settings.gradle.kts
lib/: flutter_skill.dart  flutter_skill_semantic_refs.dart
npm/: README.md  index.js  package.json
sdks/tauri/: Cargo.toml  README.md  build.rs
sdks/tauri/guest-js/: index.ts
sdks/tauri/permissions/: default.toml
sdks/tauri/permissions/autogenerated/: reference.md
sdks/tauri/permissions/autogenerated/commands/: js_result.toml
sdks/tauri/permissions/schemas/: schema.json
sdks/tauri/src/: lib.rs
(+245 files in other folders)
