[package]
name = "tauri-plugin-flutter-skill"
version = "0.9.29"
edition = "2021"
description = "Flutter Skill AI E2E testing bridge for Tauri apps"
links = "tauri-plugin-flutter-skill"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
